--- a/image2.html
+++ b/image2.html
@@ -42,18 +42,17 @@
 	================================================== -->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-8" style="padding-top: 4rem;">
-				<img src="assets/img/p1.png" alt="" class="image-responsive">
+			<div class="col-md-3 col1"></div>
+			<div class="col-md-6 justify-content-center image-col" style="padding-top: 4rem;">
+				<a class="btn btn-primary img-button" href="index.html#gallery" role="button">&times</a>
+				<img src="assets/img/p1.png" alt="" class="image-responsive" style="width: 100%;">
+				
 			</div>
-			<a class="btn btn-primary" href="index.html#gallery" role="button" style="background-color: transparent; font-size: 30px; padding: 10; border: none;">&times</a>
-			<!-- <div class="col-md-2" style="padding-top: 4rem;">
-				<span class="close">&times;</span>
-			</div> -->
+			
+			<div class="col-md-3 col2"></div>
 		</div>
 	
 	</div>
-    
 
 <!-- Bootstrap core JavaScript
 	================================================== -->
